--- a/src/main/resources/com/otavio/wenews/user-view.fxml
+++ b/src/main/resources/com/otavio/wenews/user-view.fxml
@@ -1,14 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.otavio.wenews.controllers.UserController"
-            prefHeight="400.0" prefWidth="600.0"
-            style="-fx-background-color: #2f2f33;">
 
+<AnchorPane prefHeight="700.0" prefWidth="1220.0" style="-fx-background-color: #2f2f33;" stylesheets="@user.css" xmlns:fx="http://javafx.com/fxml/1"  fx:controller="com.otavio.wenews.controllers.UserController">
+   <children>
+      <Separator layoutY="70.0" prefWidth="1220.0" />
+      <Label layoutX="110.0" layoutY="14.0" styleClass="shadowLogo" text="WeNews" textFill="WHITE">
+         <font>
+            <Font name="Roboto Black" size="30.0" />
+         </font>
+      </Label>
+      <Label alignment="TOP_RIGHT" ellipsisString="+" layoutX="869.0" layoutY="12.0" styleClass="loginCliente" text="Otavio Augusto Teixeira" textFill="WHITE">
+         <font>
+            <Font name="Roboto Medium" size="18.0" />
+         </font>
+      </Label>
+      <Button layoutX="342.0" layoutY="18.0" mnemonicParsing="false" styleClass="botaoSeletcTheme" text="Noticias" textFill="WHITE">
+         <font>
+            <Font name="Roboto Black" size="16.0" />
+         </font>
+      </Button>
+      <Button layoutX="424.0" layoutY="18.0" mnemonicParsing="false" styleClass="botaoSeletcTheme" text="Artigos" textFill="WHITE">
+         <font>
+            <Font name="Roboto Black" size="16.0" />
+         </font>
+      </Button>
+      <Button layoutX="749.0" layoutY="18.0" mnemonicParsing="false" styleClass="botaoSeletcTheme" text="Sair" textFill="WHITE">
+         <font>
+            <Font name="Roboto Black" size="16.0" />
+         </font>
+      </Button>
+      <BorderPane layoutX="109.0" layoutY="80.0" prefHeight="609.0" prefWidth="974.0" />
+   </children>
 </AnchorPane>
