--- a/src/main/resources/com/otavio/wenews/user-view.fxml
+++ b/src/main/resources/com/otavio/wenews/user-view.fxml
@@ -1,41 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<AnchorPane prefHeight="700.0" prefWidth="1220.0" style="-fx-background-color: #2f2f33;" stylesheets="@user.css" xmlns:fx="http://javafx.com/fxml/1"  fx:controller="com.otavio.wenews.controllers.UserController">
+<AnchorPane prefHeight="700.0" prefWidth="1220.0" style="-fx-background-color: #2f2f33;" stylesheets="@user.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.otavio.wenews.controllers.UserController">
    <children>
       <Separator layoutY="70.0" prefWidth="1220.0" />
-      <Label layoutX="110.0" layoutY="14.0" styleClass="shadowLogo" text="WeNews" textFill="WHITE">
+      <Label layoutX="60.0" layoutY="14.0" styleClass="shadowLogo" text="WeNews" textFill="WHITE">
          <font>
             <Font name="Roboto Black" size="30.0" />
          </font>
       </Label>
-      <Label alignment="TOP_RIGHT" ellipsisString="+" layoutX="869.0" layoutY="12.0" styleClass="loginCliente" text="Otavio Augusto Teixeira" textFill="WHITE">
+      <Label fx:id="nameUser" alignment="CENTER" contentDisplay="RIGHT" ellipsisString="+" layoutX="924.0" layoutY="12.0" maxWidth="220.0" minWidth="214.0" styleClass="loginCliente" text="Otávio Augusto" textFill="WHITE">
          <font>
             <Font name="Roboto Medium" size="18.0" />
          </font>
       </Label>
-      <Button layoutX="342.0" layoutY="18.0" mnemonicParsing="false" styleClass="botaoSeletcTheme" text="Noticias" textFill="WHITE">
+      <Button fx:id="noticias" layoutX="342.0" layoutY="18.0" mnemonicParsing="false" styleClass="botaoSeletcTheme" text="Noticias" textFill="WHITE">
          <font>
             <Font name="Roboto Black" size="16.0" />
          </font>
       </Button>
-      <Button layoutX="424.0" layoutY="18.0" mnemonicParsing="false" styleClass="botaoSeletcTheme" text="Artigos" textFill="WHITE">
+      <Button fx:id="artigos" layoutX="424.0" layoutY="18.0" mnemonicParsing="false" styleClass="botaoSeletcTheme" text="Artigos" textFill="WHITE">
          <font>
             <Font name="Roboto Black" size="16.0" />
          </font>
       </Button>
-      <Button layoutX="749.0" layoutY="18.0" mnemonicParsing="false" styleClass="botaoSeletcTheme" text="Sair" textFill="WHITE">
+      <Button fx:id="sair" layoutX="820.0" layoutY="18.0" mnemonicParsing="false" styleClass="botaoSeletcTheme" text="Sair" textFill="WHITE">
          <font>
             <Font name="Roboto Black" size="16.0" />
          </font>
       </Button>
-      <BorderPane layoutX="109.0" layoutY="80.0" prefHeight="609.0" prefWidth="974.0" />
+      <BorderPane fx:id="bp" layoutX="41.0" layoutY="80.0" prefHeight="609.0" prefWidth="1097.0" />
+      <Button fx:id="subscriber" layoutX="610.0" layoutY="19.0" mnemonicParsing="false" styleClass="botaoSeletcTheme" text="Se-inscrever" textFill="WHITE">
+         <font>
+            <Font name="Roboto Black" size="16.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
