--- a/src/main/resources/com/otavio/wenews/user.css
+++ b/src/main/resources/com/otavio/wenews/user.css
@@ -32,3 +32,19 @@
     -fx-scale-y: 1.1;
     -fx-cursor: hand;
 }
+
+.botaoSelected {
+    -fx-background-color: transparent;
+    -fx-padding: 0 0 10px 0;
+    -fx-border-style: hidden hidden solid hidden;
+    -fx-border-width: 2;
+    -fx-border-color: #48BB78;
+    -fx-border-radius: 6px;
+
+    -fx-cursor: hand;
+}
+
+.list-view-transparent {
+    -fx-control-inner-background: transparent;
+    -fx-background-color: transparent;
+}
