--- a/src/main/resources/com/otavio/wenews/funcionarios.css
+++ b/src/main/resources/com/otavio/wenews/funcionarios.css
@@ -71,7 +71,26 @@
     -fx-background-radius: 20px;
     -fx-border-width: 2;
     -fx-border-radius: 20px;
-    -fx-border-color: #48BB78;
+    -fx-border-color: #68D391;
+    -fx-padding: 8px;
+    -fx-cursor: hand;
+}
+
+.buttonsFunCancelar {
+    -fx-background-color: transparent;
+    -fx-border-width: 2;
+    -fx-border-radius: 20px;
+    -fx-border-color: #E53E3E;
+    -fx-padding: 8px;
+    -fx-cursor: hand;
+}
+
+.buttonsFunCancelar:hover {
+    -fx-background-color: rgba(255,255,255,0.3);
+    -fx-background-radius: 20px;
+    -fx-border-width: 2;
+    -fx-border-radius: 20px;
+    -fx-border-color: #F56565;
     -fx-padding: 8px;
     -fx-cursor: hand;
 }
