--- a/src/main/resources/com/otavio/wenews/posts.css
+++ b/src/main/resources/com/otavio/wenews/posts.css
@@ -1,3 +1,168 @@
 .preview {
     -fx-background-color: #2f2f33;
 }
+
+
+
+.scroll-bar:vertical .thumb {
+    -fx-background-color: #eba417;
+    -fx-border-radius: 8px;
+    -fx-background-radius: 8px;
+
+}
+.scroll-bar:horizontal .track,
+.scroll-bar:vertical .track{
+    -fx-background-color : #2f2f33;
+    -fx-border-color : #2f2f33;
+    -fx-background-radius : 0.0em;
+    -fx-border-radius :2.0em;
+}
+
+.scroll-bar:horizontal .track-background,
+.scroll-bar:vertical .track .track-background{
+    -fx-background-color : #2f2f33;
+    -fx-border-color : #2f2f33;
+    -fx-background-radius : 0.0em;
+    -fx-border-radius :2.0em;
+}
+
+.scroll-bar:horizontal .increment-button ,
+.scroll-bar:horizontal .decrement-button {
+    -fx-background-color :transparent;
+    -fx-background-radius : 0.0em;
+    -fx-padding :0.0 0.0 10.0 0.0;
+    -fx-opacity: 0;
+
+}
+
+.scroll-bar:vertical .increment-button ,
+.scroll-bar:vertical .decrement-button {
+    -fx-background-color :transparent;
+    -fx-background-radius : 0.0em;
+    -fx-padding :0.0 10.0 0.0 0.0;
+    -fx-opacity: 0;
+
+}
+
+.scroll-bar .increment-arrow,
+.scroll-bar .decrement-arrow{
+    -fx-shape : " ";
+    -fx-padding :0.15em 0.0;
+    -fx-opacity: 0;
+}
+
+.scroll-bar:vertical .increment-arrow,
+.scroll-bar:vertical .decrement-arrow{
+    -fx-shape : " ";
+    -fx-padding :0.0 0.15em;
+    -fx-opacity: 0;
+}
+
+.botaoSeInscreva {
+    -fx-background-color: #18181b;
+    -fx-background-radius: 50px;
+    -fx-font-size: 22px;
+    -fx-text-fill: white;
+    -fx-font-family: Roboto, "Sans Serif Collection";
+    -fx-font-weight: 900;
+    -fx-padding: 20px;
+    -fx-cursor: hand;
+}
+
+.botaoSeInscreva:hover {
+    -fx-background-color: #252528;
+    -fx-background-radius: 50px;
+    -fx-font-size: 22px;
+    -fx-text-fill: white;
+    -fx-font-family: Roboto, "Sans Serif Collection";
+    -fx-font-weight: 900;
+    -fx-padding: 20px;
+    -fx-cursor: hand;
+    -fx-scale-x: 1.1;
+    -fx-scale-y: 1.1;
+}
+.labelSeInscreva {
+    -fx-font-size: 20px;
+    -fx-text-fill: #38A169;
+    -fx-pref-width: 866px;
+    -fx-pref-height: 60px;
+    -fx-wrap-text: true;
+}
+
+.list-view-transparent {
+    -fx-control-inner-background: transparent;
+    -fx-background-color: transparent;
+}
+
+.inputComentario {
+    -fx-background-color: transparent;
+    -fx-border-style: hidden hidden solid hidden;
+    -fx-border-width: 2;
+    -fx-border-color: #EBA417;
+    -fx-text-fill: white;
+    -fx-prompt-text-fill: #ffffff;
+    -fx-padding: 0 0 0 10px;
+}
+.inputComentario:focused,
+.inputComentario:hover {
+    -fx-background-color: transparent;
+    -fx-border-style: hidden hidden solid hidden;
+    -fx-border-width: 2;
+    -fx-border-color: #f3c872;
+    -fx-text-fill: white;
+    -fx-prompt-text-fill: #ffffff;
+    -fx-padding: 0 0 0 10px;
+}
+
+.botaoComentar {
+    -fx-background-color: #18181b;
+    -fx-background-radius: 20px;
+    -fx-font-size: 16px;
+    -fx-text-fill: white;
+    -fx-font-weight: 900;
+    -fx-padding: 10px;
+    -fx-cursor: hand;
+    -fx-border-color: #EBA417;
+    -fx-border-width: 1px;
+    -fx-border-radius: 20px;
+}
+.botaoComentar:focused,
+.botaoComentar:hover {
+    -fx-background-color: #303036;
+    -fx-background-radius: 20px;
+    -fx-font-size: 16px;
+    -fx-text-fill: white;
+    -fx-font-weight: 900;
+    -fx-padding: 10px;
+    -fx-cursor: hand;
+    -fx-border-color: #f3c872;
+    -fx-border-width: 1px;
+    -fx-border-radius: 20px;
+    -fx-scale-x: 1.1;
+    -fx-scale-y: 1.1;
+}
+
+.comentario {
+    -fx-background-radius: 10px;
+    -fx-border-radius: 10px;
+    -fx-background-color: #e6e6e6;
+    -fx-text-fill: black;
+}
+
+.comentario:focused,
+.comentario:hover {
+    -fx-background-radius: 10px;
+    -fx-border-radius: 10px;
+    -fx-border-width: 2px;
+    -fx-border-color:  #EBA417;;
+}
+
+.text-area .scroll-pane {
+    -fx-background-color: transparent;
+}
+.text-area .scroll-pane .viewport{
+    -fx-background-color: transparent;
+}
+.text-area .scroll-pane .content{
+    -fx-background-color: transparent;
+}
