--- a/src/main/resources/com/otavio/wenews/user-view.fxml
+++ b/src/main/resources/com/otavio/wenews/user-view.fxml
@@ -4,17 +4,12 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="700.0" prefWidth="1220.0" style="-fx-background-color: #2f2f33;" stylesheets="@user.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.otavio.wenews.controllers.UserController">
+<AnchorPane prefHeight="700.0" prefWidth="1220.0" style="-fx-background-color: #2f2f33;" stylesheets="@user.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.otavio.wenews.controllers.users_controller.UserController">
    <children>
       <Separator layoutY="70.0" prefWidth="1220.0" />
-      <Label layoutX="60.0" layoutY="14.0" styleClass="shadowLogo" text="WeNews" textFill="WHITE">
+      <Label layoutX="41.0" layoutY="14.0" styleClass="shadowLogo" text="WeNews" textFill="WHITE">
          <font>
             <Font name="Roboto Black" size="30.0" />
-         </font>
-      </Label>
-      <Label fx:id="nameUser" alignment="CENTER" contentDisplay="RIGHT" ellipsisString="+" layoutX="924.0" layoutY="12.0" maxWidth="220.0" minWidth="214.0" styleClass="loginCliente" text="Otávio Augusto" textFill="WHITE">
-         <font>
-            <Font name="Roboto Medium" size="18.0" />
          </font>
       </Label>
       <Button fx:id="noticias" layoutX="342.0" layoutY="18.0" mnemonicParsing="false" styleClass="botaoSeletcTheme" text="Noticias" textFill="WHITE">
@@ -32,10 +27,10 @@
             <Font name="Roboto Black" size="16.0" />
          </font>
       </Button>
-      <BorderPane fx:id="bp" layoutX="41.0" layoutY="80.0" prefHeight="609.0" prefWidth="1097.0" />
-      <Button fx:id="subscriber" layoutX="610.0" layoutY="19.0" mnemonicParsing="false" styleClass="botaoSeletcTheme" text="Se-inscrever" textFill="WHITE">
+      <BorderPane fx:id="bp" layoutX="41.0" layoutY="80.0" prefHeight="609.0" prefWidth="1097.0" stylesheets="@posts.css" />
+      <Button fx:id="nameUser" alignment="CENTER" contentDisplay="RIGHT" layoutX="924.0" layoutY="12.0" maxWidth="220.0" minWidth="214.0" mnemonicParsing="false" styleClass="loginCliente" text="Button" textFill="WHITE">
          <font>
-            <Font name="Roboto Black" size="16.0" />
+            <Font name="Roboto Medium" size="18.0" />
          </font>
       </Button>
    </children>
