--- a/src/main/resources/com/otavio/wenews/subscriber-info-view.fxml
+++ b/src/main/resources/com/otavio/wenews/subscriber-info-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.0" prefWidth="609.0" style="-fx-background-color: #2f2f33;" stylesheets="@infos.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="com.otavio.wenews.controllers.users_controller.SubscriberController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.0" prefWidth="609.0" style="-fx-background-color: #2f2f33;" stylesheets="@infos.css" xmlns:fx="http://javafx.com/fxml/1"  fx:controller="com.otavio.wenews.controllers.users_controller.SubscriberController">
    <children>
       <Pane>
          <children>
