--- a/src/main/resources/com/otavio/wenews/login-view.fxml
+++ b/src/main/resources/com/otavio/wenews/login-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="600.0" prefWidth="400.0" style="-fx-background-color: #2f2f33;" stylesheets="@login.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.otavio.wenews.controllers.users_controller.LoginController">
+<AnchorPane prefHeight="600.0" prefWidth="400.0" style="-fx-background-color: #2f2f33;" stylesheets="@login.css" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.otavio.wenews.controllers.users_controller.LoginController">
    <children>
       <Label layoutX="65.0" layoutY="33.0" styleClass="loginHello" stylesheets="@login.css" text="Olá, seja bem vindo " textFill="WHITE">
          <font>
@@ -40,13 +40,20 @@
          <image>
             <Image url="@../../../images/palmas.png" />
          </image></ImageView>
-      <TextField fx:id="email" layoutX="102.0" layoutY="333.0" prefHeight="26.0" prefWidth="195.0" promptText="E-mail" styleClass="loginTextField" />
-      <TextField fx:id="senha" layoutX="102.0" layoutY="397.0" prefHeight="26.0" prefWidth="195.0" promptText="Senha" styleClass="loginTextField" />
+      <TextField fx:id="email" layoutX="102.0" layoutY="333.0" prefHeight="26.0" prefWidth="195.0" promptText="E-mail" styleClass="loginTextField">
+         <font>
+            <Font name="Roboto" size="12.0" />
+         </font></TextField>
       <Button fx:id="logar" layoutX="56.0" layoutY="501.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="300.0" styleClass="botaoLogar" text="Logar">
          <font>
             <Font size="18.0" />
          </font></Button>
       <Button fx:id="changeToRegister" layoutX="126.0" layoutY="552.0" mnemonicParsing="false" styleClass="botaoIncreverse" text="Não tem conta, Inscreva-se" textFill="WHITE" />
       <Label fx:id="message" layoutX="84.0" layoutY="465.0" textFill="RED" />
+      <PasswordField fx:id="senha" layoutX="102.0" layoutY="397.0" prefHeight="26.0" prefWidth="195.0" promptText="Senha" styleClass="loginTextField">
+         <font>
+            <Font name="Roboto" size="12.0" />
+         </font>
+      </PasswordField>
    </children>
 </AnchorPane>
