--- a/src/main/resources/com/otavio/wenews/user-info-view.fxml
+++ b/src/main/resources/com/otavio/wenews/user-info-view.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="609.0" prefWidth="1097.0" style="-fx-background-color: #2f2f33;" stylesheets="@infos.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="com.otavio.wenews.controllers.users_controller.UserInfosController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="609.0" prefWidth="1097.0" style="-fx-background-color: #2f2f33;" stylesheets="@infos.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.14-internal" fx:controller="com.otavio.wenews.controllers.users_controller.UserInfosController">
    <children>
       <Pane layoutY="20.0">
          <children>
@@ -54,11 +50,11 @@
       </Pane>
       <Pane layoutY="340.0">
          <children>
-            <TextField fx:id="oldPassword" layoutY="70.0" prefHeight="29.0" prefWidth="358.0" styleClass="inputInfos">
+            <PasswordField fx:id="oldPassword" layoutY="70.0" prefHeight="29.0" prefWidth="358.0" styleClass="inputInfos">
                <font>
                   <Font name="Roboto" size="18.0" />
                </font>
-            </TextField>
+            </PasswordField>
             <Label layoutX="111.0" text="Trocar senha:" textFill="WHITE">
                <font>
                   <Font name="Roboto Medium" size="22.0" />
@@ -74,11 +70,11 @@
                   <Font name="Roboto Medium" size="22.0" />
                </font>
             </Label>
-            <TextField fx:id="newPassword" layoutY="156.0" prefHeight="29.0" prefWidth="358.0" styleClass="inputInfos">
+            <PasswordField fx:id="newPassword" layoutY="156.0" prefHeight="29.0" prefWidth="358.0" styleClass="inputInfos">
                <font>
                   <Font name="Roboto" size="18.0" />
                </font>
-            </TextField>
+            </PasswordField>
          </children>
       </Pane>
       <Button fx:id="changePassword" layoutX="215.0" layoutY="551.0" mnemonicParsing="false" styleClass="botaoTrocarSenha" text="Atualizar senha!">
