--- a/src/main/resources/com/otavio/wenews/user-view.fxml
+++ b/src/main/resources/com/otavio/wenews/user-view.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="700.0" prefWidth="1220.0" style="-fx-background-color: #2f2f33;" stylesheets="@user.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.otavio.wenews.controllers.users_controller.UserController">
+<AnchorPane prefHeight="700.0" prefWidth="1220.0" style="-fx-background-color: #2f2f33;" stylesheets="@user.css" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.otavio.wenews.controllers.users_controller.UserController">
    <children>
       <Separator layoutY="70.0" prefWidth="1220.0" />
       <Label layoutX="41.0" layoutY="14.0" styleClass="shadowLogo" text="WeNews" textFill="WHITE">
